arranged the grid layout for projects page

--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -1,9 +1,7 @@
 <div class="projects-page-main" id="projects-page-main">
-
-   <div class="page-content-intro-hr"> project details </div>
+  <div class="page-content-intro-hr">project details</div>
 
   <section class="project-details">
-
     <div class="top-container">
 
       <div class="details-container top-left-details">
@@ -15,36 +13,45 @@
           />
         </div>
         <div class="project-description">
-          <div class="heading">project</div>
+          <div class="heading project">mabunda group</div>
           <div class="details">
             <p>
               A business website developed using latest web technologies such as
               HTML5, SCSS, Bootstrap 5, Font Awesome, Angular, RxJs and APIs.
             </p>
           </div>
-          <div class="project-large-status">
-            <span class="current-status git-status">
+          <div class="project-views">
+            <span class="view git-view">
               <i class="bi bi-github"></i>
-              GitHub Repo
+              GitHub
             </span>
-            <span class="current-status online-status">
+            <span class="view online-view">
               <i class="bi bi-box-arrow-up-right"></i>
-              View Website
+              Online
             </span>
           </div>
         </div>
       </div>
-
-       <div class="details-container top-right-details">
+      <div class="details-container top-right-details">
         <div class="project-description">
           <div class="heading">description</div>
           <div class="details">
             <ul>
               <li>
-                <i class="bi bi-chevron-right"></i> Geo-location weather
+                <i class="bi bi-stop"></i>
+                A business website developed using web technologies HTML5, SCSS,
+                Angular
               </li>
-              <li><i class="bi bi-chevron-right"></i> Photo Gallery</li>
-              <li><i class="bi bi-chevron-right"></i> Google Maps</li>
+              <li>
+                <i class="bi bi-stop"></i>
+                A business website developed using web technologies HTML5, SCSS,
+                Angular
+              </li>
+              <li>
+                <i class="bi bi-stop"></i>
+                A business website developed using web technologies HTML5, SCSS,
+                Angular
+              </li>
             </ul>
           </div>
         </div>
@@ -53,24 +60,21 @@
     </div>
 
     <div class="bottom-container">
-
       <div class="details-container project-concepts">
         <div class="heading">concepts</div>
         <div class="list-container">
           <div class="details">
             <ul>
-              <li>
-                <i class="bi bi-stop-circle-fill"></i> Responsive UI Design
-              </li>
-              <li><i class="bi bi-stop-circle-fill"></i> Angular Framework</li>
-              <li><i class="bi bi-stop-circle-fill"></i> RESTful APIs</li>
+              <li><i class="bi bi-record2"></i>Responsive UI Design</li>
+              <li><i class="bi bi-record2"></i> Angular Framework</li>
+              <li><i class="bi bi-record2"></i> RESTful APIs</li>
             </ul>
           </div>
           <div class="details">
             <ul>
-              <li><i class="bi bi-stop-circle-fill"></i> Unit Tests</li>
-              <li><i class="bi bi-stop-circle-fill"></i> GitHub and Git</li>
-              <li><i class="bi bi-stop-circle-fill"></i>SEO</li>
+              <li><i class="bi bi-record2"></i> Unit Tests</li>
+              <li><i class="bi bi-record2"></i> GitHub and Git</li>
+              <li><i class="bi bi-record2"></i> SEO</li>
             </ul>
           </div>
         </div>
@@ -81,28 +85,25 @@
         <div class="list-container">
           <div class="details">
             <ul>
-              <li>
-                <i class="bi bi-check-square-fill"></i> Geo-location weather
-              </li>
-              <li><i class="bi bi-check-square-fill"></i> Photo Gallery</li>
-              <li><i class="bi bi-check-square-fill"></i> Google Maps</li>
+              <li><i class="bi bi-stop-fill"></i> Geo-location weather</li>
+              <li><i class="bi bi-stop-fill"></i> Photo Gallery</li>
+              <li><i class="bi bi-stop-fill"></i> Google Maps</li>
             </ul>
           </div>
           <div class="details">
             <ul>
-              <li><i class="bi bi-check-square-fill"></i> Share buttons</li>
-              <li><i class="bi bi-check-square-fill"></i> Contact Form</li>
+              <li><i class="bi bi-stop-fill"></i> Share buttons</li>
+              <li><i class="bi bi-stop-fill"></i> Contact Form</li>
 
-              <li><i class="bi bi-check-square-fill"></i> Toggle themes</li>
+              <li><i class="bi bi-stop-fill"></i> Toggle themes</li>
             </ul>
           </div>
         </div>
       </div>
-      
     </div>
   </section>
-
-  <div class="page-content-intro-hr"> featured projects </div>
+  <!-- 
+  <div class="page-content-intro-hr"> featured projects </div> -->
 
   <!-- <section class="featured-projects">
     <div class="cards-section">
