--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -9,6 +9,7 @@
   padding: $spacing-sm;
   text-align: center;
   background-color: $light-neutral-bg-color;
+  // border-top: 8px solid red;
 
   display: grid;
   row-gap: 25px;
