--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -49,7 +49,12 @@
 
   <div class="homepage-content-section feeds-container">
     <div class="recent-project-container feed">
-      <div class="details-heading">featured project</div>
+
+      <div class="details-heading">
+        <div class="heading">
+          featured project
+        </div>
+      </div>
 
       <div class="recent-project-details">
         <div class="recent-project-img">
@@ -75,7 +80,7 @@
               </div>
 
               <div class="online more">
-                <i class="bi bi-chevron-compact-right"></i> Details
+                <i class="bi bi-bookmark"></i> Details
               </div>
               <div class="online live-site">
                 <i class="bi bi-box-arrow-up-right"></i> Online
@@ -84,6 +89,7 @@
           </div>
         </div>
       </div>
+
     </div>
 
     <div class="news-feed-container feed">
