--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -5,14 +5,16 @@ $light: #ecf0f1;
 $breakpoint: 768px;
 
 #main-navbar {
+
   .navbar {
     background-color: $primary;
     color: $light;
-    padding: 0.8rem;
+    padding: 0.6rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
+      font-size: $font-size-md + 2px;
 
     &__brand {
       font-size: 1.5rem;
@@ -23,12 +25,11 @@ $breakpoint: 768px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 20px;
+      height: 22px;
       width: 25px;
       background: none;
       border: none;
       cursor: pointer;
-      border-radius: 0px;
 
       .bar {
         height: 3px;
@@ -39,7 +40,6 @@ $breakpoint: 768px;
 
       @media (min-width: $breakpoint) {
         display: none;
-        border-radius: 0px;
       }
     }
 
@@ -59,10 +59,9 @@ $breakpoint: 768px;
 
         a {
           display: block;
-          padding: 1rem;
+          padding: 0.4rem;
           color: $light;
           text-decoration: none;
-          //  border-radius: $spacing-sm;
 
           &:hover {
             background-color: red;
@@ -79,11 +78,10 @@ $breakpoint: 768px;
         position: static;
         flex-direction: row;
         width: auto;
-        border-radius: 0px;
 
         li {
           border: none;
-
+  
           a {
             padding: 0.3rem 1rem;
           }
